--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "friday_tech_labs",
+  "homepage": "http://fridaytechlabs.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
